@@ -72,6 +72,20 @@ public:
 	//! Get the real boundingbox used by the billboard (which depends on the active camera)
 	virtual const core::aabbox3d<f32>& getTransformedBillboardBoundingBox(const irr::scene::ICameraSceneNode* camera) IRR_OVERRIDE;
 
+	//! Get the amount of mesh buffers.
+	virtual u32 getMeshBufferCount() const
+	{
+		return Buffer ? 1 : 0;
+	}
+
+	//! Get pointer to the mesh buffer.
+	virtual IMeshBuffer* getMeshBuffer(u32 nr) const
+	{
+		if ( nr == 0 )
+			return Buffer;
+		return 0;
+	}
+
 	//! Writes attributes of the scene node.
 	virtual void serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options=0) const IRR_OVERRIDE;
 
